fix, increase footer to avoid gap at bottom of screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ footer {
     font-size: 18px;
     font-family: "Lobster Two", sans-serif;
     margin: 0;
-    padding: 3px;
+    padding: 5px;
 }
 
 /*--- facts ---*/
